working on order

--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -1,14 +1,14 @@
 <ion-header [translucent]="true">
-  <ion-toolbar color="danger">
-    <ion-segment color="danger" class="pl-1 pr-1"  mode="ios" value="order" (ionChange)='segmentChanged($event)'>
+  <ion-toolbar color="dark">
+    <ion-segment color="light" class="pl-1 pr-1" value="order" (ionChange)='segmentChanged($event)'>
       <ion-segment-button (click)="book_order()" value="order">
-        <ion-label>New Order</ion-label>
+        <ion-label class="text-white text-xs">New Order</ion-label>
       </ion-segment-button>
       <ion-segment-button (click)="processing_order()" value="processing">
-        <ion-label>Ongoing </ion-label>
+        <ion-label class="text-white text-xs">Ongoing </ion-label>
       </ion-segment-button>
       <ion-segment-button (click)="completed_order()" value="completed">
-        <ion-label>Complete </ion-label>
+        <ion-label class="text-white text-xs">Complete </ion-label>
       </ion-segment-button>
     </ion-segment>
   </ion-toolbar>
@@ -16,17 +16,17 @@
 
 <ion-content [fullscreen]="true" class="ion-padding">
   <div *ngIf="switchTab === 'order'" class="p-1">
-    <div class="bdashboard bdashboard-gray-300 rounded-md border border-red-300 mb-2"  *ngFor="let order of allbooktables">
+    <div class="bdashboard bdashboard-gray-300 rounded-md border border-red-300 mb-2" *ngFor="let order of allbooktables">
       <ion-grid>
         <ion-row class="border-b border-gray-400">
           <ion-col size="12">
             <div class="flex justify-between">
               <div>
-                <p class="text-lg text-black">Ashwini Talware</p>
-                <p class="text-gray-400 text-sm">Mon, Sep 25, 2023 11:27 AM</p>
+                <p class="text-lg text-black">{{order.name}}</p>
+                <p class="text-gray-400 text-sm">{{order.order_date}}</p>
               </div>
               <div>
-                <p class="text-sm text-black">ID: #01</p>
+                <p class="text-sm text-black">ID: {{order.order_id2}}</p>
               </div>
             </div>
           </ion-col>
@@ -35,36 +35,27 @@
           <p class="text-gray-400 text-xs mt-2"> ITEMS</p>
     
           <!-- Items Div -->
-          <div class="border-gray-300 border-dashed border-b">
-            <p class="text-black text-lg font-semibold mt-2">Chicken Biryani X 1</p>
+          <div class="border-gray-300 border-dashed border-b" *ngFor="let card of order.cards">
             <div class="flex justify-between">
-              <p>- Half</p>
-              <p>120 /-</p>
+              <p class="text-black text-lg font-semibold mt-2">{{card.recipe_name}} - Qty : {{card.quantity}}</p>
+              <p>{{card.recipe_price}} /-</p>
             </div>
           </div>
-    
-          <!-- Items Div -->
-          <div class="border-gray-300 border-dashed border-b mt-1">
-            <div class="flex justify-between">
-              <p class="text-black text-lg font-semibold mt-2">Mutton Biryani X 1</p>
-              <p>300 /-</p>
-            </div>
-          </div>
-    
+        
           <div class="flex justify-between">
             <p class="text-gray-500 text-md mt-2"> TOTAL AMOUNT</p>
-            <p class="text-black font-semibold text-md mt-2"> 750.20</p>
+            <p class="text-black font-semibold text-md mt-2"> {{order.grand_total}}</p>
           </div>
         </div>
     
         <ion-row>
           <ion-col size="6">
-            <ion-button class="btn_class" color="success" expand="block">
+            <ion-button (click)="accept_table(order['order_id2'])" class="btn_class" color="success" expand="block">
               Accept
             </ion-button>
           </ion-col>
           <ion-col size="6">
-            <ion-button class="btn_class" color="danger" expand="block" fill="outline">
+            <ion-button (click)="cancel_table(order['order_id2'])" class="btn_class" color="dark" expand="block" fill="outline">
               Reject
             </ion-button>
           </ion-col>
@@ -75,17 +66,17 @@
   </div>
 
   <div *ngIf="switchTab === 'processing'" class="p-1">
-    <div class="bdashboard bdashboard-gray-300 rounded-md border border-green-300">
+    <div class="bdashboard bdashboard-gray-300 rounded-md border border-green-300" *ngFor="let order of allprocessing">
       <ion-grid>
         <ion-row class="border-b border-gray-400">
           <ion-col size="12">
             <div class="flex justify-between">
               <div>
-                <p class="text-lg text-black">Mayuri Patil</p>
-                <p class="text-gray-400 text-sm">Mon, Sep 25, 2023 11:27 AM</p>
+                <p class="text-lg text-black">{{order.name}}</p>
+                <p class="text-gray-400 text-sm">{{order.order_date}}</p>
               </div>
               <div>
-                <p class="text-sm text-black">ID: #05</p>
+                <p class="text-sm text-black">ID: {{order.order_id2}}</p>
               </div>
             </div>
           </ion-col>
@@ -93,28 +84,22 @@
         <div class="p-2">
           <p class="text-gray-400 text-xs mt-2"> ITEMS</p>
           <!-- Items Div -->
-          <div class="border-gray-300 border-dashed border-b">
-            <p class="text-black text-lg font-semibold mt-2">Chicken Biryani X 1</p>
+          <div class="border-gray-300 border-dashed border-b"  *ngFor="let card of order.cards">
             <div class="flex justify-between">
-              <p>- Half</p>
-              <p>120 /-</p>
+              <p class="text-black text-lg font-semibold mt-2">{{card.recipe_name}} - Qty : {{card.quantity}}</p>
+              <p>{{card.recipe_price}} /-</p>
             </div>
           </div>
           <!-- Items Div -->
-          <div class="border-gray-300 border-dashed border-b mt-1">
-            <div class="flex justify-between">
-              <p class="text-black text-lg font-semibold mt-2">Mutton Biryani X 1</p>
-              <p>300 /-</p>
-            </div>
-          </div>
+      
           <div class="flex justify-between">
             <p class="text-gray-400 text-md mt-2"> TOTAL AMOUNT</p>
-            <p class="text-black font-semibold text-md mt-2"> 750.20</p>
+            <p class="text-black font-semibold text-md mt-2"> {{order.grand_total}}</p>
           </div>
           <div class="border-b border-gray-300 border-dashed mt-3"></div>
           <div class="flex justify-between p-2">
             <p class="text-black font-bold text-lg mt-2"> Status</p>
-            <p class="text-green-500 font-semibold text-md mt-2"> Order is Cooking</p>
+            <p class="text-green-500 font-semibold text-md mt-2"> {{order.status}}</p>
           </div>
         </div>
       </ion-grid>
@@ -129,3 +114,20 @@
   
   </ion-content>
   
+  <ion-footer>
+    <ion-toolbar>
+      <div class="flex justify-between p-2 pl-3 pr-3">
+          <div class="text-center text-gray-600 hover:text-red-600" routerLink="/dashboard">
+            <ion-icon name="fast-food"></ion-icon>
+            <ion-title class="text-sm">Orders</ion-title>
+          </div>
+  
+          <div class="text-center text-gray-600 hover:text-red-600"  routerLink="/profile">
+            <ion-icon name="person"></ion-icon>
+            <ion-title class="text-sm">Account</ion-title>
+          </div>
+      </div>
+    </ion-toolbar>
+  
+  
+  </ion-footer>
