--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -9,7 +9,7 @@
         height: 50px;
         width: 50px;
         border-radius: 50%;
-        border: 2px solid var(--ion-color-primary);
+        border: 2px solid var(--ion-color-dark);
         margin: 0px 10px;
     }
   
