--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -21,7 +21,7 @@
         </ion-list>
         <ion-row>
           <ion-col size="12" (click)="login_submit(form_login)">
-            <ion-button class="btn_class" shape="round" color="danger" expand="block">Login</ion-button>
+            <ion-button class="btn_class" shape="round" color="dark" expand="block">Login</ion-button>
           </ion-col>
         </ion-row>
       </div>
