--- a/src/app/show-map/show-map.page.html
+++ b/src/app/show-map/show-map.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="dark">
     <ion-title color="light">Location</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -8,9 +8,8 @@
 <ion-content>
   <div #mapElement class="map"></div>
 
- 
 
-  <div class="address_main_div">
+  <!-- <div class="address_main_div">
     <ion-row>
       <ion-col size="12" class="border border-gray-200 rounded-md p-2">
         <ion-label class="font-bold text-sm text-black">Current Location:</ion-label>
@@ -45,5 +44,5 @@
         Show Route
       </button>
     </ion-row>
-  </div>
+  </div> -->
 </ion-content>
